rc,httpd,www: support new inadyn with SSL, add second DDNS profile to WebUI, ability third custom DDNS profile from /etc/storage/inadyn/inadyn.conf

--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -51,7 +51,11 @@ endif
 endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_EAP_PEAP),y)
-CFLAGS += -DEAP_PEAP
+CFLAGS += -DSUPPORT_PEAP_SSL
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_DDNS_SSL),y)
+CFLAGS += -DSUPPORT_DDNS_SSL
 endif
 
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
