project tree: more flexible boards configuration

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -12,6 +12,7 @@ UCLINUX_BUILD_LIB=1
 -include $(LINUX_CONFIG)
 include $(CONFIG_CONFIG)
 include $(ARCH_CONFIG)
+include $(ROOTDIR)/user/shared/boards.mk
 
 CFLAGS  += -ffunction-sections -fdata-sections
 LDFLAGS += -Wl,--gc-sections
@@ -25,60 +26,55 @@ dir_  =
 LIBS_INCLUDE_LIBSSL=n
 LIBS_INCLUDE_LIBICONV=n
 LIBS_INCLUDE_LIBUSB_0=n
+LIBS_INCLUDE_LIBUSB_1=n
 LIBS_INCLUDE_MEDIA=n
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_EAP_PEAP),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
-
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_DDNS_SSL),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
-
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTTPS),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
-
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SFTP),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
-
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_OPENVPN),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
-
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
 
+ifneq ($(BOARD_NUM_USB_PORTS),0)
+LIBS_INCLUDE_LIBUSB_1=y
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_U2EC),y)
+LIBS_INCLUDE_LIBUSB_0=y
+endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
-
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
-
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_MINIDLNA),y)
 LIBS_INCLUDE_LIBICONV=y
 LIBS_INCLUDE_MEDIA=y
 endif
-
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_FIREFLY),y)
 LIBS_BUILD_SHARED=y
 LIBS_INCLUDE_LIBICONV=y
 LIBS_INCLUDE_MEDIA=y
 endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_U2EC),y)
-LIBS_INCLUDE_LIBUSB_0=y
 endif
 
 dir_y						+= libz
 dir_$(LIBS_INCLUDE_LIBICONV)			+= libiconv
 dir_$(LIBS_INCLUDE_LIBSSL)			+= libssl
 dir_$(LIBS_INCLUDE_LIBUSB_0)			+= libusb
-dir_y						+= libusb-1.0
+dir_$(LIBS_INCLUDE_LIBUSB_1)			+= libusb-1.0
 
 # ipset shared libs
 dir_$(CONFIG_FIRMWARE_INCLUDE_IPSET)		+= libmnl
