--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -12,10 +12,12 @@ UCLINUX_BUILD_USER=1
 -include $(LINUX_CONFIG)
 include $(CONFIG_CONFIG)
 include $(ARCH_CONFIG)
-include $(ROOTDIR)/vendors/$(CONFIG_VENDOR)/boards.mk
+include shared/boards.mk
 
 INSTALLDIR = $(ROOTDIR)/romfs
 
+USB_ENABLED=n
+FS_EXT_ENABLED=n
 FS_FAT_ENABLED=n
 FS_NTFS_ENABLED=n
 OPENSSH_ENABLED=n
@@ -31,6 +33,17 @@ else
 OPENSSH_ENABLED=y
 endif
 
+ifneq ($(BOARD_NUM_USB_PORTS),0)
+USB_ENABLED=y
+ifeq ($(CONFIG_FIRMWARE_ENABLE_EXT2),y)
+FS_EXT_ENABLED=y
+endif
+ifeq ($(CONFIG_FIRMWARE_ENABLE_EXT3),y)
+FS_EXT_ENABLED=y
+endif
+ifeq ($(CONFIG_FIRMWARE_ENABLE_EXT4),y)
+FS_EXT_ENABLED=y
+endif
 ifeq ($(CONFIG_FIRMWARE_ENABLE_FAT),y)
 FS_FAT_ENABLED=y
 endif
@@ -39,6 +52,7 @@ FS_FAT_ENABLED=y
 endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_NTFS_3G),y)
 FS_NTFS_ENABLED=y
+endif
 endif
 
 dir_y =
@@ -69,29 +83,29 @@ dir_$(CONFIG_IPV6)					+= radvd
 dir_y							+= igmpproxy
 dir_y							+= udpxy
 dir_y							+= nfsd
-dir_y							+= util-linux
-dir_y							+= e2fsprogs
+dir_$(USB_ENABLED)					+= util-linux
 dir_$(CONFIG_FIRMWARE_INCLUDE_HDPARM)			+= hdparm
 dir_y							+= utils
 dir_y							+= lanauth
-dir_y							+= comgt-0.32
 dir_y							+= 802.1x
 dir_y							+= wpa_supplicant
 dir_y							+= pppd
 dir_y							+= accel-pptpd
 dir_y							+= xl2tpd
 dir_y							+= rp-l2tp
-dir_y							+= usb-modeswitch
 dir_y							+= tcpcheck
+dir_y							+= lldt
+dir_$(FS_EXT_ENABLED)					+= e2fsprogs
 dir_$(FS_FAT_ENABLED)					+= dosfstools
 dir_$(FS_NTFS_ENABLED)					+= ntfs-3g
-dir_y							+= lldt
 dir_$(CONFIG_FIRMWARE_INCLUDE_LPRD)			+= LPRng
 dir_$(CONFIG_FIRMWARE_INCLUDE_U2EC)			+= u2ec
-dir_y							+= p910nd
+dir_$(USB_ENABLED)					+= p910nd
+dir_$(USB_ENABLED)					+= usb-modeswitch
+dir_$(USB_ENABLED)					+= comgt-0.32
+dir_$(USB_ENABLED)					+= uqmi
 dir_y							+= optware
 dir_y							+= scripts
-dir_y							+= uqmi
 
 # tcpdump
 dir_$(CONFIG_FIRMWARE_INCLUDE_TCPDUMP)			+= tcpdump
