--- a/trunk/user/httpd/Makefile
+++ b/trunk/user/httpd/Makefile
@@ -1,72 +1,27 @@
-SHDIR = $(ROOTDIR)/user/shared
 USERDIR = $(ROOTDIR)/user
+SHDIR = $(ROOTDIR)/user/shared
 
 CFLAGS += -Wall -I. -I$(SHDIR) -I$(SHDIR)/include -I$(USERDIR)/libdisk -I$(USERDIR)/wireless_tools
-CFLAGS += $(if $(CONFIG_IPV6),-DUSE_IPV6,)
-CFLAGS += $(if $(CONFIG_HNAT_V2),-DUSE_HW_NAT_V2,)
-CFLAGS += $(if $(CONFIG_RA_HW_NAT_IPV6),-DUSE_IPV6_HW_NAT,)
-CFLAGS += $(if $(CONFIG_RA_HW_NAT_PCI),-DUSE_WWAN_HW_NAT,)
-CFLAGS += $(if $(CONFIG_RAETH_GMAC2),,-DUSE_SINGLE_MAC)
-CFLAGS += $(if $(CONFIG_RT3352_INIC_MII),-DUSE_RT3352_MII,)
-CFLAGS += $(if $(CONFIG_RT2860V2_AP_WSC),-DUSE_WSC_WPS,)
-CFLAGS += $(if $(CONFIG_USB_XHCI_HCD),-DUSE_USB3,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_LPRD),-DSRV_LPRD,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_U2EC),-DSRV_U2EC,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_HDPARM),-DUTL_HDPARM,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_OPENVPN),-DAPP_OPENVPN,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_XUPNPD),-DAPP_XUPNPD,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_MINIDLNA),-DAPP_MINIDLNA,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_FIREFLY),-DAPP_FIREFLY,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION),-DAPP_TRMD,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_ARIA),-DAPP_ARIA,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_SMBD),-DAPP_SMBD,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_FTPD),-DAPP_FTPD,)
-CFLAGS += $(if $(CONFIG_FIRMWARE_INCLUDE_NFSD),-DAPP_NFSD,)
 
-ifdef CONFIG_RTL8367
-CFLAGS += -DUSE_RTL8367
-CFLAGS += $(if $(CONFIG_RTL8367_API_8367B),-DUSE_RTL8367_API_8367B,)
-else
-ifdef CONFIG_RAETH_ESW
-CFLAGS += -DUSE_MTK_ESW
-endif
-endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_EAP_PEAP),y)
-CFLAGS += -DSUPPORT_PEAP_SSL
-endif
-
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_DDNS_SSL),y)
-CFLAGS += -DSUPPORT_DDNS_SSL
-endif
-
-ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_DROPBEAR),y)
-CFLAGS += -DAPP_SSHD
-endif
-else
-CFLAGS += -DAPP_SSHD
-endif
+include ../shared/cflags.mk
 
 LDFLAGS  = -L$(SHDIR) -L$(USERDIR)/libdisk -L$(USERDIR)/wireless_tools
 LDFLAGS += -lm -lshared -ldisk -liw
-
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTTPS),y)
-CFLAGS  += -DSUPPORT_HTTPS
 LDFLAGS += -L$(STAGEDIR)/lib -lssl -lcrypto
 endif
 
 EXEC = httpd
 OBJS = httpd.o ej.o cgi.o web_ex.o common.o nvram_x.o ralink.o crc32.o initial_web_hook.o aspbw.o
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTTPS),y)
+OBJS += https.o
+endif
 ifdef CONFIG_RTL8367
 OBJS += switch_rtl8367.o
 else
 ifdef CONFIG_RAETH_ESW
 OBJS += switch_mtk_esw.o
 endif
-endif
-ifeq ($(CONFIG_FIRMWARE_INCLUDE_HTTPS),y)
-OBJS += https.o
 endif
 
 all: $(OBJS) Makefile
