ralink gpio: add explicit param RALINK_GPIOMODE_SPI_REFCLK for MT7620

--- a/trunk/configs/IPv6/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/IPv6/RT-N14U/kernel-3.4.x.config
@@ -1078,6 +1078,7 @@ CONFIG_RALINK_GPIOMODE_PA_G=y
 # CONFIG_RALINK_GPIOMODE_UARTL is not set
 CONFIG_RALINK_GPIOMODE_UARTF=y
 # CONFIG_RALINK_GPIOMODE_SPI is not set
+CONFIG_RALINK_GPIOMODE_SPI_REFCLK=y
 CONFIG_RALINK_GPIOMODE_I2C=y
 # CONFIG_RALINK_GPIO_LED is not set
 # CONFIG_RALINK_GDMA is not set
