busybox: upstream updates

--- a/trunk/configs/IPv4/busybox.config
+++ b/trunk/configs/IPv4/busybox.config
@@ -853,6 +853,7 @@ CONFIG_TRACEROUTE=y
 CONFIG_DHCPD_LEASES_FILE=""
 CONFIG_UDHCPC=y
 CONFIG_FEATURE_UDHCPC_ARPING=y
+# CONFIG_FEATURE_UDHCPC_SANITIZEOPT is not set
 # CONFIG_FEATURE_UDHCP_PORT is not set
 CONFIG_UDHCP_DEBUG=1
 # CONFIG_FEATURE_UDHCP_RFC3397 is not set
