hw_nat: debug messages cosmetics

--- a/trunk/configs/IPv4/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/IPv4/RT-N14U/kernel-3.4.x.config
@@ -1996,6 +1996,7 @@ CONFIG_RA_HW_NAT_NTU_DLTA=5
 # CONFIG_RA_HW_NAT_MCAST is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
+# CONFIG_RA_HW_NAT_DEBUG is not set
 
 #
 # Ralink Devices
