--- a/trunk/configs/IPv6/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/IPv6/RT-N14U/kernel-3.4.x.config
@@ -2042,6 +2042,7 @@ CONFIG_RA_HW_NAT_IPV6=y
 # CONFIG_RA_HW_NAT_MCAST is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
+# CONFIG_RA_HW_NAT_DEBUG is not set
 
 #
 # Ralink Devices
