project tree: simplify configs, merge IPv4 and IPv6 configs (use script for disable IPv6), move project version to versions.inc file

--- a/trunk/configs/templates/n56u_base.config
+++ b/trunk/configs/templates/n56u_base.config
@@ -1,13 +1,12 @@
 ### Target Vendor/Product (support only Ralink RT3883/MT7620)
 CONFIG_VENDOR=Ralink
-CONFIG_PRODUCT=MT7620
+CONFIG_PRODUCT=RT3883
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="RT-N14U"
-
-### Firmware version (3.K.X.X-YYY)
-CONFIG_FIRMWARE_ROOTFS_VER="3.8"
-CONFIG_FIRMWARE_BUILDS_VER="084"
+CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
+#CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
+#CONFIG_FIRMWARE_PRODUCT_ID="SWR1100"
+#CONFIG_FIRMWARE_PRODUCT_ID="BN750DB"
 
 ### Linux kernel and toolchain
 CONFIG_LINUXDIR=linux-3.0.x
@@ -23,8 +22,15 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
 ### Also allow build image for load w/o flash from UART console
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
+### Kernel driver select for WiFi AP 5GHz
+### 2.4 = RT3883/3662 v2.4.3.6
+### 2.7 = RT3883/3662 v2.7.1.6
+CONFIG_FIRMWARE_WIFI5_DRIVER=2.7
+
 ### Kernel driver select for WiFi AP 2.4GHz
-### 2.7 = MT7620 v2.7.1.6
+### 2.4 = RT3092 v2.4.0.5
+### 2.5 = RT3092 v2.5.0.11
+### 2.7 = RT3092 v2.7.1.5
 CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Enable IPv6 support
@@ -34,7 +40,7 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
-CONFIG_FIRMWARE_ENABLE_FAT=y
+#CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
 CONFIG_FIRMWARE_ENABLE_EXFAT=y
@@ -85,7 +91,7 @@ CONFIG_FIRMWARE_INCLUDE_NFSD=y
 CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_CIFS=y
+#CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ############################################################
 ### Userspace configuration
@@ -121,13 +127,13 @@ CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 
 ### Include "parted" utility (allow make GPT partitions). ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_PARTED=y
+#CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
 ### Include SMB server. ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
 ### Include syslog for SMB server. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
+#CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
 ### Include FTP server. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_FTPD=y
@@ -163,20 +169,20 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
-CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
+#CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
 ### Include Firefly iTunes mediaserver. ~1.0MB
-CONFIG_FIRMWARE_INCLUDE_FIREFLY=y
+#CONFIG_FIRMWARE_INCLUDE_FIREFLY=y
 
 ### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna and Firefly. ~0.1MB
 #CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
+#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
-CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
+#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
-CONFIG_FIRMWARE_INCLUDE_ARIA=y
+#CONFIG_FIRMWARE_INCLUDE_ARIA=y
 
