--- a/trunk/configs/templates/n65u_base.config
+++ b/trunk/configs/templates/n65u_base.config
@@ -3,16 +3,12 @@ CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=RT3883
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
-#CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
+#CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
+CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
 #CONFIG_FIRMWARE_PRODUCT_ID="SWR1100"
 #CONFIG_FIRMWARE_PRODUCT_ID="BN750DB"
 
-### Firmware version (3.K.X.X-YYY)
-CONFIG_FIRMWARE_ROOTFS_VER="3.8"
-CONFIG_FIRMWARE_BUILDS_VER="084"
-
-### Linux kernel and toolchain
+### Linux kernel and toolchain (only linux-3.0.x for "RT-N65U" target yet)
 CONFIG_LINUXDIR=linux-3.0.x
 #CONFIG_LINUXDIR=linux-3.4.x
 CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
@@ -31,12 +27,6 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
 ### 2.7 = RT3883/3662 v2.7.1.6
 CONFIG_FIRMWARE_WIFI5_DRIVER=2.7
 
-### Kernel driver select for WiFi AP 2.4GHz
-### 2.4 = RT3092 v2.4.0.5
-### 2.5 = RT3092 v2.5.0.11
-### 2.7 = RT3092 v2.7.1.5
-CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
-
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
@@ -44,7 +34,7 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
-#CONFIG_FIRMWARE_ENABLE_FAT=y
+CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
 CONFIG_FIRMWARE_ENABLE_EXFAT=y
@@ -82,7 +72,7 @@ CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 ### Include IMQ module for shapers (a bit of performance degradation). ~0.02MB
 #CONFIG_FIRMWARE_INCLUDE_IMQ=y
 
-### Include IFB module for shapers. ~0.03MB
+### Include IFB module for shapers (can not enabled for "RT-N65U" target). ~0.03MB
 #CONFIG_FIRMWARE_INCLUDE_IFB=y
 
 ### Include IPSet utility and kernel modules. ~0.4MB
@@ -95,7 +85,7 @@ CONFIG_FIRMWARE_INCLUDE_NFSD=y
 CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_CIFS=y
+CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ############################################################
 ### Userspace configuration
@@ -125,7 +115,7 @@ CONFIG_FIRMWARE_INCLUDE_LPRD=y
 CONFIG_FIRMWARE_INCLUDE_U2EC=y
 
 ### Include "tcpdump" utility. ~0.6MB
-#CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
+CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_HDPARM=y
@@ -167,13 +157,13 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include "openssl" executable for generate certificates. ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
-CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
+#CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
 ### Include Firefly iTunes mediaserver. ~1.0MB
 #CONFIG_FIRMWARE_INCLUDE_FIREFLY=y
@@ -182,7 +172,7 @@ CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 #CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
+#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
 #CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
