--- a/trunk/configs/templates/n14u_full.config
+++ b/trunk/configs/templates/n14u_full.config
@@ -1,18 +1,11 @@
 ### Target Vendor/Product (support only Ralink RT3883/MT7620)
 CONFIG_VENDOR=Ralink
-CONFIG_PRODUCT=RT3883
+CONFIG_PRODUCT=MT7620
 
 ### Target ProductID (board select, max 12 symbols)
-#CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
-CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
-#CONFIG_FIRMWARE_PRODUCT_ID="SWR1100"
-#CONFIG_FIRMWARE_PRODUCT_ID="BN750DB"
+CONFIG_FIRMWARE_PRODUCT_ID="RT-N14U"
 
-### Firmware version (3.K.X.X-YYY)
-CONFIG_FIRMWARE_ROOTFS_VER="3.8"
-CONFIG_FIRMWARE_BUILDS_VER="084"
-
-### Linux kernel and toolchain (only linux-3.0.x for "RT-N65U" target yet)
+### Linux kernel and toolchain
 CONFIG_LINUXDIR=linux-3.0.x
 #CONFIG_LINUXDIR=linux-3.4.x
 CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
@@ -26,22 +19,21 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
 ### Also allow build image for load w/o flash from UART console
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
-### Kernel driver select for WiFi AP 5GHz
-### 2.4 = RT3883/3662 v2.4.3.6
-### 2.7 = RT3883/3662 v2.7.1.6
-CONFIG_FIRMWARE_WIFI5_DRIVER=2.7
+### Kernel driver select for WiFi AP 2.4GHz
+### 2.7 = MT7620 v2.7.1.6
+CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
 ### Enable NTFS filesystem support via Paragon "ufsd" driver. ~0.4MB
-#CONFIG_FIRMWARE_ENABLE_UFSD=y
+CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
-#CONFIG_FIRMWARE_ENABLE_FAT=y
+CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
-#CONFIG_FIRMWARE_ENABLE_EXFAT=y
+CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support. ~0.1MB
 #CONFIG_FIRMWARE_ENABLE_EXT2=y
@@ -56,19 +48,19 @@ CONFIG_FIRMWARE_ENABLE_EXT4=y
 #CONFIG_FIRMWARE_ENABLE_XFS=y
 
 ### Enable FUSE (filesystems in userspace) support. ~0.1MB
-#CONFIG_FIRMWARE_ENABLE_FUSE=y
+CONFIG_FIRMWARE_ENABLE_FUSE=y
 
 ### Enable swap files/partitions support. ~0.05MB
-#CONFIG_FIRMWARE_ENABLE_SWAP=y
+CONFIG_FIRMWARE_ENABLE_SWAP=y
 
 ### Include UVC camera modules. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_UVC=y
+CONFIG_FIRMWARE_INCLUDE_UVC=y
 
 ### Include USB-HID modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_HID=y
 
 ### Include USB-Serial modules (e.g. pl2303). ~0.03MB
-#CONFIG_FIRMWARE_INCLUDE_SERIAL=y
+CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include network QoS scheduling modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_QOS=y
@@ -76,20 +68,20 @@ CONFIG_FIRMWARE_ENABLE_EXT4=y
 ### Include IMQ module for shapers (a bit of performance degradation). ~0.02MB
 #CONFIG_FIRMWARE_INCLUDE_IMQ=y
 
-### Include IFB module for shapers (can not enabled for "RT-N65U" target). ~0.03MB
+### Include IFB module for shapers. ~0.03MB
 #CONFIG_FIRMWARE_INCLUDE_IFB=y
 
 ### Include IPSet utility and kernel modules. ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_IPSET=y
+CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include NFSv3 server. ~0.6MB
-#CONFIG_FIRMWARE_INCLUDE_NFSD=y
+CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. ~0.5MB
-#CONFIG_FIRMWARE_INCLUDE_NFSC=y
+CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_CIFS=y
+CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ############################################################
 ### Userspace configuration
@@ -113,40 +105,40 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 #CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 
 ### Include LPR printer daemon. ~0.12MB
-#CONFIG_FIRMWARE_INCLUDE_LPRD=y
+CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
 CONFIG_FIRMWARE_INCLUDE_U2EC=y
 
 ### Include "tcpdump" utility. ~0.6MB
-#CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
+CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
-#CONFIG_FIRMWARE_INCLUDE_HDPARM=y
+CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 
 ### Include "parted" utility (allow make GPT partitions). ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_PARTED=y
+CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
 ### Include SMB server. ~1.5MB
-#CONFIG_FIRMWARE_INCLUDE_SMBD=y
+CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
 ### Include syslog for SMB server. ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
+CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
 ### Include FTP server. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_FTPD=y
+CONFIG_FIRMWARE_INCLUDE_FTPD=y
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
-#CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
+CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
 ### Include HTTPS support for DDNS client. openssl ~1.2MB
-#CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
+CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
 
 ### Include HTTPS support. openssl ~1.2MB
-#CONFIG_FIRMWARE_INCLUDE_HTTPS=y
+CONFIG_FIRMWARE_INCLUDE_HTTPS=y
 
 ### Include sftp-server. openssl ~1.2MB, sftp-server ~0.06MB
-#CONFIG_FIRMWARE_INCLUDE_SFTP=y
+CONFIG_FIRMWARE_INCLUDE_SFTP=y
 
 ### Include dropbear SSH. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
@@ -158,29 +150,29 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include "openssl" executable for generate certificates. ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
-#CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
+CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
 ### Include Firefly iTunes mediaserver. ~1.0MB
-#CONFIG_FIRMWARE_INCLUDE_FIREFLY=y
+CONFIG_FIRMWARE_INCLUDE_FIREFLY=y
 
 ### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna and Firefly. ~0.1MB
 #CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
+CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
-#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
+CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
-#CONFIG_FIRMWARE_INCLUDE_ARIA=y
+CONFIG_FIRMWARE_INCLUDE_ARIA=y
 
