--- a/trunk/configs/templates/n56u_dlna.config
+++ b/trunk/configs/templates/n56u_dlna.config
@@ -1,13 +1,12 @@
 ### Target Vendor/Product (support only Ralink RT3883/MT7620)
 CONFIG_VENDOR=Ralink
-CONFIG_PRODUCT=MT7620
+CONFIG_PRODUCT=RT3883
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="RT-N14U"
-
-### Firmware version (3.K.X.X-YYY)
-CONFIG_FIRMWARE_ROOTFS_VER="3.8"
-CONFIG_FIRMWARE_BUILDS_VER="084"
+CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
+#CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
+#CONFIG_FIRMWARE_PRODUCT_ID="SWR1100"
+#CONFIG_FIRMWARE_PRODUCT_ID="BN750DB"
 
 ### Linux kernel and toolchain
 CONFIG_LINUXDIR=linux-3.0.x
@@ -23,21 +22,28 @@ CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-rt3883
 ### Also allow build image for load w/o flash from UART console
 #CONFIG_FIRMWARE_TYPE_ROOTFS_IN_RAM=y
 
+### Kernel driver select for WiFi AP 5GHz
+### 2.4 = RT3883/3662 v2.4.3.6
+### 2.7 = RT3883/3662 v2.7.1.6
+CONFIG_FIRMWARE_WIFI5_DRIVER=2.7
+
 ### Kernel driver select for WiFi AP 2.4GHz
-### 2.7 = MT7620 v2.7.1.6
+### 2.4 = RT3092 v2.4.0.5
+### 2.5 = RT3092 v2.5.0.11
+### 2.7 = RT3092 v2.7.1.5
 CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
 ### Enable NTFS filesystem support via Paragon "ufsd" driver. ~0.4MB
-#CONFIG_FIRMWARE_ENABLE_UFSD=y
+CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
 #CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
-#CONFIG_FIRMWARE_ENABLE_EXFAT=y
+CONFIG_FIRMWARE_ENABLE_EXFAT=y
 
 ### Enable EXT2 filesystem support. ~0.1MB
 #CONFIG_FIRMWARE_ENABLE_EXT2=y
@@ -52,19 +58,19 @@ CONFIG_FIRMWARE_ENABLE_EXT4=y
 #CONFIG_FIRMWARE_ENABLE_XFS=y
 
 ### Enable FUSE (filesystems in userspace) support. ~0.1MB
-#CONFIG_FIRMWARE_ENABLE_FUSE=y
+CONFIG_FIRMWARE_ENABLE_FUSE=y
 
 ### Enable swap files/partitions support. ~0.05MB
-#CONFIG_FIRMWARE_ENABLE_SWAP=y
+CONFIG_FIRMWARE_ENABLE_SWAP=y
 
 ### Include UVC camera modules. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_UVC=y
+CONFIG_FIRMWARE_INCLUDE_UVC=y
 
 ### Include USB-HID modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_HID=y
 
 ### Include USB-Serial modules (e.g. pl2303). ~0.03MB
-#CONFIG_FIRMWARE_INCLUDE_SERIAL=y
+CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include network QoS scheduling modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_QOS=y
@@ -76,13 +82,13 @@ CONFIG_FIRMWARE_ENABLE_EXT4=y
 #CONFIG_FIRMWARE_INCLUDE_IFB=y
 
 ### Include IPSet utility and kernel modules. ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_IPSET=y
+CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include NFSv3 server. ~0.6MB
-#CONFIG_FIRMWARE_INCLUDE_NFSD=y
+CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. ~0.5MB
-#CONFIG_FIRMWARE_INCLUDE_NFSC=y
+CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_CIFS=y
@@ -109,7 +115,7 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 #CONFIG_FIRMWARE_INCLUDE_NTFS_3G=y
 
 ### Include LPR printer daemon. ~0.12MB
-#CONFIG_FIRMWARE_INCLUDE_LPRD=y
+CONFIG_FIRMWARE_INCLUDE_LPRD=y
 
 ### Include USB-over-Ethernet printer daemon. ~0.05MB
 CONFIG_FIRMWARE_INCLUDE_U2EC=y
@@ -118,31 +124,31 @@ CONFIG_FIRMWARE_INCLUDE_U2EC=y
 #CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
 ### Include "hdparm" utility (allow set HDD spindown timeout and APM). ~0.1MB
-#CONFIG_FIRMWARE_INCLUDE_HDPARM=y
+CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 
 ### Include "parted" utility (allow make GPT partitions). ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
 ### Include SMB server. ~1.5MB
-#CONFIG_FIRMWARE_INCLUDE_SMBD=y
+CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
 ### Include syslog for SMB server. ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
 ### Include FTP server. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_FTPD=y
+CONFIG_FIRMWARE_INCLUDE_FTPD=y
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
-#CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
+CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
 ### Include HTTPS support for DDNS client. openssl ~1.2MB
-#CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
+CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
 
 ### Include HTTPS support. openssl ~1.2MB
-#CONFIG_FIRMWARE_INCLUDE_HTTPS=y
+CONFIG_FIRMWARE_INCLUDE_HTTPS=y
 
 ### Include sftp-server. openssl ~1.2MB, sftp-server ~0.06MB
-#CONFIG_FIRMWARE_INCLUDE_SFTP=y
+CONFIG_FIRMWARE_INCLUDE_SFTP=y
 
 ### Include dropbear SSH. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
@@ -154,16 +160,16 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 #CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include "openssl" executable for generate certificates. ~0.4MB
 #CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Minidlna UPnP mediaserver. ~1.6MB
-#CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
+CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
 ### Include Firefly iTunes mediaserver. ~1.0MB
 #CONFIG_FIRMWARE_INCLUDE_FIREFLY=y
@@ -172,7 +178,7 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 #CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
+CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
 #CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
