--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.ram.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.ram.config
@@ -214,13 +214,23 @@ CONFIG_LOG_BUF_SHIFT=14
 CONFIG_SYSFS_DEPRECATED=y
 CONFIG_SYSFS_DEPRECATED_V2=y
 # CONFIG_RELAY is not set
-# CONFIG_BLK_DEV_INITRD is not set
+CONFIG_BLK_DEV_INITRD=y
+CONFIG_INITRAMFS_SOURCE="../romfs"
+CONFIG_INITRAMFS_ROOT_UID=0
+CONFIG_INITRAMFS_ROOT_GID=0
+# CONFIG_RD_GZIP is not set
+# CONFIG_RD_BZIP2 is not set
+CONFIG_RD_LZMA=y
+# CONFIG_RD_XZ is not set
+# CONFIG_RD_LZO is not set
+# CONFIG_INITRAMFS_COMPRESSION_NONE is not set
+CONFIG_INITRAMFS_COMPRESSION_LZMA=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_EXPERT=y
 CONFIG_SYSCTL_SYSCALL=y
-# CONFIG_KALLSYMS is not set
+CONFIG_KALLSYMS=y
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
@@ -857,9 +867,8 @@ CONFIG_RT2880_FLASH_16M=y
 CONFIG_RT2880_MTD_PHYSMAP_START=0x1C000000
 CONFIG_RT2880_MTD_PHYSMAP_LEN=0x1000000
 CONFIG_RT2880_MTD_PHYSMAP_BUSWIDTH=2
-# CONFIG_RT2880_ROOTFS_IN_RAM is not set
-CONFIG_RT2880_ROOTFS_IN_FLASH=y
-CONFIG_ROOTFS_IN_FLASH_NO_PADDING=y
+CONFIG_RT2880_ROOTFS_IN_RAM=y
+# CONFIG_RT2880_ROOTFS_IN_FLASH is not set
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_COW_COMMON is not set
@@ -1610,36 +1619,7 @@ CONFIG_TMPFS=y
 # CONFIG_TMPFS_XATTR is not set
 # CONFIG_HUGETLB_PAGE is not set
 # CONFIG_CONFIGFS_FS is not set
-CONFIG_MISC_FILESYSTEMS=y
-# CONFIG_ADFS_FS is not set
-# CONFIG_AFFS_FS is not set
-# CONFIG_HFS_FS is not set
-# CONFIG_HFSPLUS_FS is not set
-# CONFIG_BEFS_FS is not set
-# CONFIG_BFS_FS is not set
-# CONFIG_EFS_FS is not set
-# CONFIG_JFFS2_FS is not set
-# CONFIG_LOGFS is not set
-# CONFIG_CRAMFS is not set
-CONFIG_SQUASHFS=y
-# CONFIG_SQUASHFS_XATTR is not set
-# CONFIG_SQUASHFS_ZLIB is not set
-# CONFIG_SQUASHFS_LZO is not set
-CONFIG_SQUASHFS_XZ=y
-# CONFIG_SQUASHFS_4K_DEVBLK_SIZE is not set
-CONFIG_SQUASHFS_EMBEDDED=y
-CONFIG_SQUASHFS_FRAGMENT_CACHE_SIZE=3
-# CONFIG_VXFS_FS is not set
-# CONFIG_MINIX_FS is not set
-# CONFIG_MINIX_FS_NATIVE_ENDIAN is not set
-# CONFIG_OMFS_FS is not set
-# CONFIG_HPFS_FS is not set
-# CONFIG_QNX4FS_FS is not set
-# CONFIG_QNX6FS_FS is not set
-# CONFIG_ROMFS_FS is not set
-# CONFIG_PSTORE is not set
-# CONFIG_SYSV_FS is not set
-# CONFIG_UFS_FS is not set
+# CONFIG_MISC_FILESYSTEMS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 CONFIG_NFS_FS=m
 CONFIG_NFS_V3=y
@@ -1740,7 +1720,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_EARLY_PRINTK is not set
 CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE="console=ttyS0,57600n8 root=/dev/mtdblock4 rootfstype=squashfs"
+CONFIG_CMDLINE="console=ttyS0,57600n8 root=/dev/ram0"
 CONFIG_CMDLINE_OVERRIDE=y
 # CONFIG_UBOOT_CMDLINE is not set
 
@@ -1881,15 +1861,9 @@ CONFIG_CRC32_SARWATE=y
 # CONFIG_ZLIB_DEFLATE is not set
 # CONFIG_LZO_COMPRESS is not set
 # CONFIG_LZO_DECOMPRESS is not set
-CONFIG_XZ_DEC=y
-# CONFIG_XZ_DEC_X86 is not set
-# CONFIG_XZ_DEC_POWERPC is not set
-# CONFIG_XZ_DEC_IA64 is not set
-# CONFIG_XZ_DEC_ARM is not set
-# CONFIG_XZ_DEC_ARMTHUMB is not set
-# CONFIG_XZ_DEC_SPARC is not set
+# CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
-# CONFIG_XZ_DEC_TEST is not set
+CONFIG_DECOMPRESS_LZMA=y
 # CONFIG_TEXTSEARCH is not set
 # CONFIG_TEXTSEARCH_KMP is not set
 # CONFIG_TEXTSEARCH_BM is not set
@@ -1973,7 +1947,7 @@ CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
 # CONFIG_RT2860V2_AP_SINGLE_SKU is not set
 # CONFIG_RT2860V2_AP_MEMORY_OPTIMIZATION is not set
 # CONFIG_RT2860V2_AP_ATE is not set
-# CONFIG_RT2860V2_AP_DBG is not set
+CONFIG_RT2860V2_AP_DBG=y
 
 #
 # AP MODE Ralink PCIe RT309x wireless driver
@@ -2040,7 +2014,7 @@ CONFIG_RA_HW_NAT_IPV6=y
 # CONFIG_RA_HW_NAT_MCAST is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
-# CONFIG_RA_HW_NAT_DEBUG is not set
+CONFIG_RA_HW_NAT_DEBUG=y
 
 #
 # Ralink Devices
