kernel-3.x.x: MIPS: introduce CPU_R4K_FPU, commit 91405eb69ee007ee854aa917e2a15e6ccede2cd1 upstream

--- a/trunk/configs/boards/BN750DB/kernel-3.0.x.config
+++ b/trunk/configs/boards/BN750DB/kernel-3.0.x.config
@@ -127,6 +127,7 @@ CONFIG_PAGE_SIZE_4KB=y
 # CONFIG_PAGE_SIZE_64KB is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_CPU_HAS_PREFETCH=y
+CONFIG_CPU_R4K_FPU=y
 CONFIG_MIPS_MT_DISABLED=y
 # CONFIG_ARCH_PHYS_ADDR_T_64BIT is not set
 CONFIG_CPU_HAS_SYNC=y
