--- a/trunk/configs/boards/RT-N56U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56U/kernel-3.4.x.config
@@ -127,6 +127,7 @@ CONFIG_PAGE_SIZE_4KB=y
 # CONFIG_PAGE_SIZE_64KB is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_CPU_HAS_PREFETCH=y
+CONFIG_CPU_R4K_FPU=y
 CONFIG_MIPS_MT_DISABLED=y
 # CONFIG_ARCH_PHYS_ADDR_T_64BIT is not set
 CONFIG_CPU_HAS_SYNC=y
