--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.ram.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.ram.config
@@ -1938,7 +1938,7 @@ CONFIG_INTERNAL_PA_INTERNAL_LNA=y
 # CONFIG_EXTERNAL_PA_EXTERNAL_LNA is not set
 # CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION_SUPPORT is not set
 CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC=y
-CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION=y
+# CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
 CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
 # CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
 CONFIG_RT2860V2_AP_IGMP_SNOOP=y
