samba: allow build nmbd only for usage upcoming WINS service

--- a/trunk/user/samba3/Makefile
+++ b/trunk/user/samba3/Makefile
@@ -112,10 +112,15 @@ distclean: clean
 	@find $(SRC_NAME) -name config.cache | xargs rm -f
 
 romfs:
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_SMBD),y)
 	$(ROMFSINST) $(THISDIR)/$(SRC_NAME)/bin/smbmulti /sbin/smbmulti
 	$(ROMFSINST) -s smbmulti /sbin/smbd
 	$(ROMFSINST) -s smbmulti /sbin/nmbd
 	$(ROMFSINST) -s /sbin/smbmulti /bin/smbpasswd
 	mkdir -p $(ROMFSDIR)/usr/lib/samba
 	cp -f $(THISDIR)/$(SRC_NAME)/codepages/*.dat $(ROMFSDIR)/usr/lib/samba
-
+else
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_WINS),y)
+	$(ROMFSINST) $(THISDIR)/$(SRC_NAME)/bin/nmbd /sbin/nmbd
+endif
+endif
