--- a/trunk/configs/boards/BN750DB/kernel-3.4.x.config
+++ b/trunk/configs/boards/BN750DB/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.102 Kernel Configuration
+# Linux/mips 3.4.104 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1979,7 +1979,7 @@ CONFIG_GENERIC_ATOMIC64=y
 # CONFIG_RALINK_RDM is not set
 
 #
-# Ethernet PHY Giga-Switch
+# External Ethernet Giga-Switch
 #
 CONFIG_RTL8367=y
 CONFIG_RTL8367_API_8367B=y
@@ -2004,7 +2004,7 @@ CONFIG_RTL8367_RGMII_DELAY_RX=2
 CONFIG_RTL8367_IGMP_SNOOPING=y
 
 #
-# Ethernet Ralink RT3xxx/RT5xxx/MT762x wire driver
+# Ralink Wired Ethernet Driver
 #
 CONFIG_RAETH=y
 # CONFIG_RAETH_JUMBOFRAME is not set
@@ -2023,13 +2023,50 @@ CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
 
 #
-# Platform config for Ralink RT3xxx/RT5xxx
+# Ralink Wireless 802.11 Support
+#
+
+#
+# 1st Wireless Interface
+#
+# CONFIG_RT_FIRST_IF_NONE is not set
+CONFIG_RT_FIRST_IF_RT2860=y
+# CONFIG_RT_FIRST_IF_RANGE_2GHZ is not set
+CONFIG_RT_FIRST_IF_RANGE_5GHZ=y
+CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
+CONFIG_RT_FIRST_IF_RF_OFFSET=0x40000
+CONFIG_RT_FIRST_CARD=2860
+CONFIG_RT_FIRST_CARD_EEPROM="flash"
+
+#
+# 2nd Wireless Interface
+#
+# CONFIG_RT_SECOND_IF_NONE is not set
+# CONFIG_RT_SECOND_IF_RT3352_INIC is not set
+CONFIG_RT_SECOND_IF_RT3090=y
+# CONFIG_RT_SECOND_IF_RT5392 is not set
+# CONFIG_RT_SECOND_IF_RT5592 is not set
+# CONFIG_RT_SECOND_IF_RT3593 is not set
+# CONFIG_RT_SECOND_IF_MT7610E is not set
+# CONFIG_RT_SECOND_IF_MT7612E is not set
+# CONFIG_RT_SECOND_IF_MT7602E is not set
+# CONFIG_RT_SECOND_IF_MT7603E is not set
+CONFIG_RT_SECOND_IF_RANGE_2GHZ=y
+CONFIG_RT_SECOND_IF_EEPROM_FLASH=y
+# CONFIG_RT_SECOND_IF_EEPROM_EFUSE is not set
+# CONFIG_RT_SECOND_IF_EEPROM_PROM is not set
+CONFIG_RT_SECOND_IF_RF_OFFSET=0x48000
+CONFIG_RT_SECOND_CARD=3090
+CONFIG_RT_SECOND_CARD_EEPROM="flash"
+
+#
+# Wireless drivers settings
 #
 # CONFIG_RALINK_RT3662_2T2R is not set
 CONFIG_RALINK_RT3883_3T3R=y
 
 #
-# AP MODE Ralink APSoC RT3xxx/RT5xxx/MT7620 wireless driver
+# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless Driver
 #
 CONFIG_RT2860V2_AP=m
 CONFIG_RT2860V2_AP_LED=y
@@ -2040,19 +2077,18 @@ CONFIG_RT2860V2_AP_WDS=y
 CONFIG_RT2860V2_AP_MBSS=y
 # CONFIG_RT2860V2_AP_MBSS_NEW_MBSSID_MODE is not set
 CONFIG_RT2860V2_AP_APCLI=y
-CONFIG_RT2860V2_AP_IGMP_SNOOP=y
-# CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
 # CONFIG_RT2860V2_AP_DFS is not set
 # CONFIG_RT2860V2_AP_CARRIER is not set
 # CONFIG_RT2860V2_AP_DLS is not set
 # CONFIG_RT2860V2_AP_IDS is not set
-# CONFIG_RT2860V2_AP_ANTENNA_DIVERSITY is not set
 CONFIG_RT2860V2_AP_GREENAP=y
 # CONFIG_RT2860V2_AP_VIDEO_TURBINE is not set
 # CONFIG_RT2860V2_AP_TXBF is not set
 CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
 # CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
+CONFIG_RT2860V2_AP_IGMP_SNOOP=y
 CONFIG_RT2860V2_AP_MCAST_RATE_SPECIFIC=y
+# CONFIG_RT2860V2_AP_NETIF_BLOCK is not set
 # CONFIG_RT2860V2_AP_SNMP is not set
 CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
 # CONFIG_RT2860V2_AP_SINGLE_SKU is not set
@@ -2061,7 +2097,7 @@ CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
 # CONFIG_RT2860V2_AP_DBG is not set
 
 #
-# AP MODE Ralink PCIe RT309x wireless driver
+# AP MODE Ralink RT309x PCIe Wireless Driver
 #
 CONFIG_RT3090_AP=m
 # CONFIG_RT3090_AP_RT3390 is not set
@@ -2087,32 +2123,7 @@ CONFIG_RT3090_AP_READ_MAC_FROM_MTD=y
 # CONFIG_RT3090_AP_DBG is not set
 
 #
-# AP MODE Ralink PCIe RT5392 wireless driver
-#
-# CONFIG_RT5392_AP is not set
-
-#
-# AP MODE Ralink PCIe RT5592 wireless driver
-#
-# CONFIG_RT5592_AP is not set
-
-#
-# AP MODE Ralink PCIe RT3593 wireless driver
-#
-# CONFIG_RT3593_AP is not set
-
-#
-# AP MODE Ralink PCIe MT7610E wireless driver
-#
-# CONFIG_MT7610_AP is not set
-
-#
-# AP MODE Ralink iNIC MII RT3352 wireless driver
-#
-# CONFIG_RT3352_INIC_MII is not set
-
-#
-# NAT acell mode
+# Ralink NAT Acceleration Mode
 #
 # CONFIG_RA_NAT_NONE is not set
 CONFIG_RA_NAT_HW=y
@@ -2143,14 +2154,14 @@ CONFIG_RA_HW_NAT_UNB_MNP=1000
 CONFIG_RA_HW_NAT_UDP_DLTA=5
 CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
-# CONFIG_RA_HW_NAT_IPV6 is not set
 # CONFIG_RA_HW_NAT_ACL2UP_HELPER is not set
+# CONFIG_RA_HW_NAT_IPV6 is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
 # CONFIG_RA_HW_NAT_DEBUG is not set
 
 #
-# Ralink Devices
+# Ralink Peripheral Devices
 #
 CONFIG_RT3XXX_EHCI_OHCI=y
 CONFIG_RTDEV_PCI=y
