--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.ram.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.ram.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.102 Kernel Configuration
+# Linux/mips 3.4.104 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1843,7 +1843,6 @@ CONFIG_CRYPTO_ARC4=y
 # Library routines
 #
 CONFIG_BITREVERSE=y
-CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_GENERIC_IO=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
@@ -1883,12 +1882,12 @@ CONFIG_GENERIC_ATOMIC64=y
 # CONFIG_RALINK_RDM is not set
 
 #
-# Ethernet PHY Giga-Switch
+# External Ethernet Giga-Switch
 #
 # CONFIG_RTL8367 is not set
 
 #
-# Ethernet Ralink RT3xxx/RT5xxx/MT762x wire driver
+# Ralink Wired Ethernet Driver
 #
 CONFIG_RAETH=y
 # CONFIG_RAETH_32B_DESC is not set
@@ -1915,11 +1914,41 @@ CONFIG_RAETH_READ_MAC_FROM_MTD=y
 # CONFIG_RAETH_MEMORY_OPTIMIZATION is not set
 
 #
-# Platform config for Ralink RT3xxx/RT5xxx
+# Ralink Wireless 802.11 Support
 #
 
 #
-# AP MODE Ralink APSoC RT3xxx/RT5xxx/MT7620 wireless driver
+# 1st Wireless Interface
+#
+# CONFIG_RT_FIRST_IF_NONE is not set
+CONFIG_RT_FIRST_IF_RT2860=y
+CONFIG_RT_FIRST_IF_RANGE_2GHZ=y
+# CONFIG_RT_FIRST_IF_RANGE_5GHZ is not set
+CONFIG_RT_FIRST_IF_EEPROM_FLASH=y
+CONFIG_RT_FIRST_IF_RF_OFFSET=0x40000
+CONFIG_RT_FIRST_CARD=2860
+CONFIG_RT_FIRST_CARD_EEPROM="flash"
+
+#
+# 2nd Wireless Interface
+#
+CONFIG_RT_SECOND_IF_NONE=y
+# CONFIG_RT_SECOND_IF_RT3352_INIC is not set
+# CONFIG_RT_SECOND_IF_RT3090 is not set
+# CONFIG_RT_SECOND_IF_RT5392 is not set
+# CONFIG_RT_SECOND_IF_RT5592 is not set
+# CONFIG_RT_SECOND_IF_RT3593 is not set
+# CONFIG_RT_SECOND_IF_MT7610E is not set
+# CONFIG_RT_SECOND_IF_MT7612E is not set
+# CONFIG_RT_SECOND_IF_MT7602E is not set
+# CONFIG_RT_SECOND_IF_MT7603E is not set
+
+#
+# Wireless drivers settings
+#
+
+#
+# AP MODE Ralink RT3xxx/RT5xxx/MT7620 APSoC Wireless Driver
 #
 CONFIG_RT2860V2_AP=m
 CONFIG_RT2860V2_AP_LED=y
@@ -1938,9 +1967,9 @@ CONFIG_RT2860V2_AP_GREENAP=y
 CONFIG_INTERNAL_PA_INTERNAL_LNA=y
 # CONFIG_INTERNAL_PA_EXTERNAL_LNA is not set
 # CONFIG_EXTERNAL_PA_EXTERNAL_LNA is not set
-# CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION_SUPPORT is not set
 CONFIG_RT2860V2_AP_RTMP_INTERNAL_TX_ALC=y
 # CONFIG_RT2860V2_AP_RTMP_TEMPERATURE_COMPENSATION is not set
+# CONFIG_RT2860V2_AP_ADJ_PWR_CONSUMPTION_SUPPORT is not set
 CONFIG_RT2860V2_AP_AUTO_CH_SELECT_ENHANCE=y
 # CONFIG_RT2860V2_AP_80211N_DRAFT3 is not set
 CONFIG_RT2860V2_AP_IGMP_SNOOP=y
@@ -1953,37 +1982,7 @@ CONFIG_RT2860V2_AP_READ_MAC_FROM_MTD=y
 CONFIG_RT2860V2_AP_DBG=y
 
 #
-# AP MODE Ralink PCIe RT309x wireless driver
-#
-# CONFIG_RT3090_AP is not set
-
-#
-# AP MODE Ralink PCIe RT5392 wireless driver
-#
-# CONFIG_RT5392_AP is not set
-
-#
-# AP MODE Ralink PCIe RT5592 wireless driver
-#
-# CONFIG_RT5592_AP is not set
-
-#
-# AP MODE Ralink PCIe RT3593 wireless driver
-#
-# CONFIG_RT3593_AP is not set
-
-#
-# AP MODE Ralink PCIe MT7610E wireless driver
-#
-# CONFIG_MT7610_AP is not set
-
-#
-# AP MODE Ralink iNIC MII RT3352 wireless driver
-#
-# CONFIG_RT3352_INIC_MII is not set
-
-#
-# NAT acell mode
+# Ralink NAT Acceleration Mode
 #
 # CONFIG_RA_NAT_NONE is not set
 CONFIG_RA_NAT_HW=y
@@ -2020,6 +2019,6 @@ CONFIG_RA_HW_NAT_WIFI=y
 CONFIG_RA_HW_NAT_DEBUG=y
 
 #
-# Ralink Devices
+# Ralink Peripheral Devices
 #
 CONFIG_RT3XXX_EHCI_OHCI=y
