kernel-3.x.x: decrease kernel code size, thanks to 'sfstudio'

--- a/trunk/configs/boards/RT-N14U/kernel-3.0.x.ram.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.0.x.ram.config
@@ -1095,18 +1095,8 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_HWMON is not set
 # CONFIG_THERMAL is not set
 # CONFIG_WATCHDOG is not set
-CONFIG_SSB_POSSIBLE=y
-
-#
-# Sonics Silicon Backplane
-#
-# CONFIG_SSB is not set
-CONFIG_BCMA_POSSIBLE=y
-
-#
-# Broadcom specific AMBA
-#
-# CONFIG_BCMA is not set
+# CONFIG_SSB_POSSIBLE is not set
+# CONFIG_BCMA_POSSIBLE is not set
 # CONFIG_MFD_SUPPORT is not set
 # CONFIG_REGULATOR is not set
 CONFIG_MEDIA_SUPPORT=m
@@ -1642,8 +1632,7 @@ CONFIG_HAVE_FUNCTION_TRACE_MCOUNT_TEST=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
-CONFIG_TRACING_SUPPORT=y
-# CONFIG_FTRACE is not set
+# CONFIG_TRACING_SUPPORT is not set
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_SAMPLES is not set
